<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@mipmap/chess">

        <LinearLayout
            android:id="@+id/login_layout"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="100dp">
            <Button
                android:id="@+id/login"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:textSize="30sp"
                android:textAllCaps="false"
                android:textColor="#fff"
                android:background="#6B8E23"
                android:text="@string/login"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/register_layout"
            android:layout_below="@+id/login_layout"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="100dp">
            <Button
                android:id="@+id/register"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:textSize="30sp"
                android:textAllCaps="false"
                android:textColor="#fff"
                android:background="#6B8E23"
                android:text="@string/register"/>
        </LinearLayout>

        <LinearLayout
            android:gravity="center"
            android:layout_below="@+id/register_layout"
            android:layout_width="match_parent"
            android:layout_height="100dp">
            <Button
                android:id="@+id/switch_language"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:textSize="30sp"
                android:textAllCaps="false"
                android:textColor="#fff"
                android:background="#6B8E23"
                android:text="@string/language"/>
        </LinearLayout>

    </RelativeLayout>

</android.support.constraint.ConstraintLayout>